adds FontAwesome to head for icons. Adds View Card and Share Link placeholders in StoryCard

--- a/.storybook/head.html
+++ b/.storybook/head.html
@@ -1,2 +1,6 @@
+<!-- Typekit Fonts -->
 <script src="https://use.typekit.net/mbf2sam.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
+<!-- FontAwesome -->
+<script src="https://use.fontawesome.com/031ebbe0c7.js"></script>
