--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,6 +1,10 @@
 <!-- Typekit Fonts -->
 <script src="https://use.typekit.net/mbf2sam.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+<script>
+  try {
+    Typekit.load({ async: true });
+  } catch (e) {}
+</script>
 
 <!-- FontAwesome -->
 <script src="https://use.fontawesome.com/031ebbe0c7.js"></script>
